modificaciones de ubicacion

--- a/src/index.css
+++ b/src/index.css
@@ -86,7 +86,7 @@ h5 {
 /* css para pagina principal Elvis */
 
 :root{
-    --rojo:#9E0C26;
+    --rojo:#981915;
     --sangre:#C20831;
     --plomo:rgb(55 65 81 / var(--tw-text-opacity));;
 }
